--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "three": "^0.167.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^5.0.35",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
