--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/rapier": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.510.0",
     "meshline": "^3.3.1",
+    "motion": "^12.11.4",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^3.3.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "daisyui": "^5.0.35",
     "postcss": "^8",
     "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
